# sensores-gy33-gy302

./: CMakeLists.txt  main.c
libs/include/: color_utils.h  config.h  gy33.h  ws2812.h
libs/src/: color_utils.c  gy33.c  mlp.c
